more swagger & error handling
