# docs/swagger.json
@@ -31,6 +31,24 @@
                     "dummy"
                 ],
                 "summary": "Select all Dummies",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "example": 0,
+                        "description": "start example",
+                        "name": "start",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "example": 10,
+                        "description": "count example",
+                        "name": "count",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -222,9 +240,6 @@
         "/payer/payers": {
             "get": {
                 "description": "Select all Payers",
-                "consumes": [
-                    "application/json"
-                ],
                 "produces": [
                     "application/json"
                 ],
@@ -232,6 +247,24 @@
                     "payer"
                 ],
                 "summary": "Select all Payers",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "example": 0,
+                        "description": "start example",
+                        "name": "start",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "example": 10,
+                        "description": "count example",
+                        "name": "count",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -300,9 +333,6 @@
         "/payer/{id}": {
             "get": {
                 "description": "Get one Payer from ID",
-                "consumes": [
-                    "application/json"
-                ],
                 "produces": [
                     "application/json"
                 ],
@@ -402,9 +432,6 @@
         "/product/products": {
             "get": {
                 "description": "Select all Products",
-                "consumes": [
-                    "application/json"
-                ],
                 "produces": [
                     "application/json"
                 ],
@@ -412,6 +439,24 @@
                     "product"
                 ],
                 "summary": "Select all Products",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "example": 0,
+                        "description": "start example",
+                        "name": "start",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "example": 10,
+                        "description": "count example",
+                        "name": "count",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -480,9 +525,6 @@
         "/product/{id}": {
             "get": {
                 "description": "Get one Product from ID",
-                "consumes": [
-                    "application/json"
-                ],
                 "produces": [
                     "application/json"
                 ],
